# ai-image-studio

./: .gitattributes  .gitignore  README.md  pyproject.toml
ai_image_studio/scripts/: batch_generator.py  prompt_manager.py
ai_image_studio/utils/: file_helpers.py
config/: settings.json
prompts/projects/: fantasy_book.json
scripts/: batch_generator.py
